--- a/entrada.html
+++ b/entrada.html
@@ -4,23 +4,46 @@
 		<meta charset="utf-8" />
 		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		
-		<form action="saida.html" method="get" >
+		<div id="busca-cep">
 			
 			<div class="form-group">
 				<label for="cep">CEP</label>
 		    	<input class="form-control" type="text" name="cep" id="cep" required="true" onkeypress="$(this).mask('00000-000')" >
 			</div>
 			
-			<input class="btn btn-primary" type="submit" value="Buscar Endereço">
-			
-		</form>
+			<div id="result">
+    	    	<div class="form-group">
+        	    	<label>Logradouro</label>
+	        	    <input id="logradouro" type="text" disabled class="form-control">
+	    	     </div>
+    	    	 <div class="form-group">
+        	    	<label>Bairro</label>
+	        	    <input id="bairro" class="form-control" type="text" disabled >
+	    	     </div>
+    	    	 <div class="form-group">
+        	    	<label>Localidade</label>
+	        	    <input id="localidade" class="form-control" type="text" disabled >
+	    	     </div>
+    	    	 <div class="form-group">
+        	    <label>UF</label>
+            	<input id="uf" class="form-control" type="text" disabled >
+        		</div>
+			</div>
+			<div id="msg-box">
+				<div class="alert alert-danger" role="alert">
+					Endereço não encontrado!
+				</div>
+			</div>
+		</div>
 		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script src="logica.js"></script>
 	</body>
 </html>
